third_party/move/move-compiler/tests/move_check/translated_ir_tests/move/signer/read_ref_transitive2.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/translated_ir_tests/move/signer/read_ref_transitive2.move:5:9
  │
4 │         let x = S<signer> { s };
  │                 ---------------
  │                 │ │
  │                 │ The type '0x8675309::M::S<signer>' can have the ability 'copy' but the type argument 'signer' does not have the required ability 'copy'
  │                 The type '0x8675309::M::S<signer>' does not have the ability 'copy'
5 │         *&x
  │         ^^^ Invalid dereference. Dereference requires the 'copy' ability

